--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,7 @@
   }
  
   .dark {
-    --background: 0 0% 3.9%;
+    --background: rgb(23 23 23);
     --foreground: 0 0% 98%;
  
     --muted: 0 0% 14.9%;
